--- a/src/components/ShopCartCard/ShopCartCard.module.scss
+++ b/src/components/ShopCartCard/ShopCartCard.module.scss
@@ -1,17 +1,87 @@
 .card {
   display: flex;
-  align-items: center;
+  // align-items: center;
+  flex-direction: column;
   gap: 10px;
-  padding: 10px;
+  padding: 15px;
   border: 1px solid #ccc;
   border-radius: 10px;
+  position: relative;
+}
+
+.preview {
+  position: relative;
+  display: flex;
+  gap: 10px;
+}
+
+.previewInner {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .img {
-  width: 100%;
-  max-width: 100px;
+  // width: 100%;
+  width: 100px;
 }
 
 .title {
   margin: 0;
+  padding-block-start: 10px;
+}
+
+.artikul {
+  font-size: 10px;
+  color: #888;
+}
+
+.checkbox {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.trashButton {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.button {
+  border: none;
+  background-color: transparent;
+  padding: 5px 10px;
+  cursor: pointer;
+  border-radius: 10px;
+
+  &:active {
+    background-color: #eee;
+  }
+}
+
+.countButtons {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  overflow: hidden;
+
+  span {
+    font-size: 20px;
+    font-weight: 300;
+  }
+}
+
+.widgetBottom {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  span {
+    display: block;
+    font-size: 20px;
+    font-weight: 500;
+  }
 }
